k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3 #number of pods this deployment is going to make
  selector: # for furture update, locate all the pods by matching label component: web
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: qianweng/multi-client
          ports: 
            - containerPort: 3000
