k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3 #number of pods this deployment is going to make
  selector: # for furture update, locate all the pods by matching label component: web
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: qianweng/multi-server
          ports: 
            - containerPort: 5000
